docs/issues/output_issue3_20220310a/deleteOP_issue3_20220310a.txt
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Aj
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> 1
1
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Vi
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
single_linked_list.c: In function 'delete':
single_linked_list.c:153:36: error: 'j' undeclared (first use in this function)
  153 |         printf("strcpm OP is: %d", j);
      |                                    ^
single_linked_list.c:153:36: note: each undeclared identifier is reported only once for each function it appears in
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Aj
strcpm OP is: 0PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Ja
-> Aj-> Ja
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Vi
-> Aj-> Ja-> Vi
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Vi
strcpm OP is: -1PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
3
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
Ja
You selected Insertion of Name...
Now Enter the Name: -> Aj-> Ja
Enter the Choice:
Vi
You selected Insertion of Name...
Now Enter the Name: -> Aj-> Ja-> Vi
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Aj
strcpm OP is: 0
-> G-> Ja-> Vi
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Ja
strcpm OP is: 1
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src> cd "e:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src\" ; if ($?) { gcc single_linked_list.c -o single_linked_list } ; if ($?) { .\single_linked_list }
1. Add Entry:
2. Delete Entry:
3. Display Entries:
4. exit
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: Aj
-> Aj
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: Aj
strcpm OP is: 0
-> f
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: ja
-> ja
Enter the Choice:
1
You selected Insertion of Name...
Now Enter the Name: aj
-> ja-> aj
Enter the Choice:
2
You selected Deletion of Name...
Enter the Name need to be deleted: aj
strcpm OP is: 1
PS E:\Training\GitHub\Single-Linked-List\issue1\Single-Linked-List\src>